[gd_scene load_steps=7 format=2]

[ext_resource path="res://scenes/login_screen/scripts/settings_button.gd" type="Script" id=1]
[ext_resource path="res://scenes/login_screen/scripts/key_binds_manager.gd" type="Script" id=2]
[ext_resource path="res://scenes/login_screen/scripts/login_window_manager.gd" type="Script" id=3]
[ext_resource path="res://scenes/login_screen/scripts/mouse_settings_manager.gd" type="Script" id=4]
[ext_resource path="res://scenes/login_screen/scripts/key_binds_generator.gd" type="Script" id=5]

[sub_resource type="StyleBoxEmpty" id=1]

[node name="LoginScreen" type="Control"]
pause_mode = 1
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_horizontal_guides_": [  ],
"_edit_use_anchors_": false,
"_edit_vertical_guides_": [  ]
}

[node name="Main" type="HBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
custom_constants/separation = 0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Left" type="VBoxContainer" parent="Main"]
margin_right = 640.0
margin_bottom = 1080.0
size_flags_horizontal = 3
alignment = 2

[node name="Settings" type="Button" parent="Main/Left"]
margin_left = 271.0
margin_top = 948.0
margin_right = 369.0
margin_bottom = 976.0
rect_min_size = Vector2( 98, 28 )
size_flags_horizontal = 4
toggle_mode = true
text = "Settings"
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Control" type="Control" parent="Main/Left"]
margin_top = 980.0
margin_right = 640.0
margin_bottom = 1080.0
rect_min_size = Vector2( 0, 100 )

[node name="Center" type="VBoxContainer" parent="Main"]
margin_left = 640.0
margin_right = 1280.0
margin_bottom = 1080.0
size_flags_horizontal = 3
alignment = 2

[node name="LoginWindow" type="VBoxContainer" parent="Main/Center"]
margin_left = 220.0
margin_top = 842.0
margin_right = 420.0
margin_bottom = 976.0
rect_min_size = Vector2( 200, 0 )
size_flags_horizontal = 4
custom_constants/separation = 10
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Login" type="LineEdit" parent="Main/Center/LoginWindow"]
margin_right = 200.0
margin_bottom = 24.0
focus_next = NodePath("../Password")
focus_previous = NodePath("../Buttons/Quit")
align = 1
max_length = 16
placeholder_text = "LOGIN"
caret_blink = true

[node name="Password" type="LineEdit" parent="Main/Center/LoginWindow"]
margin_top = 34.0
margin_right = 200.0
margin_bottom = 62.0
rect_min_size = Vector2( 0, 28 )
focus_next = NodePath("../SaveId")
focus_previous = NodePath("../Login")
align = 1
max_length = 16
secret = true
placeholder_text = "PASSWORD"
caret_blink = true

[node name="SaveId" type="CheckBox" parent="Main/Center/LoginWindow"]
margin_top = 72.0
margin_right = 74.0
margin_bottom = 96.0
size_flags_horizontal = 0
text = "Save Id"

[node name="Buttons" type="HBoxContainer" parent="Main/Center/LoginWindow"]
margin_top = 106.0
margin_right = 200.0
margin_bottom = 134.0

[node name="Enter" type="Button" parent="Main/Center/LoginWindow/Buttons"]
margin_right = 98.0
margin_bottom = 28.0
rect_min_size = Vector2( 0, 28 )
focus_next = NodePath("../Quit")
focus_previous = NodePath("../../SaveId")
size_flags_horizontal = 3
disabled = true
text = "ENTER"

[node name="Quit" type="Button" parent="Main/Center/LoginWindow/Buttons"]
margin_left = 102.0
margin_right = 200.0
margin_bottom = 28.0
rect_min_size = Vector2( 0, 28 )
focus_next = NodePath("../../Login")
focus_previous = NodePath("../Enter")
size_flags_horizontal = 3
text = "QUIT"

[node name="Seperation" type="Control" parent="Main/Center"]
margin_top = 980.0
margin_right = 640.0
margin_bottom = 1080.0
rect_min_size = Vector2( 0, 100 )

[node name="Right" type="VBoxContainer" parent="Main"]
margin_left = 1280.0
margin_right = 1920.0
margin_bottom = 1080.0
size_flags_horizontal = 3

[node name="SettingsWindow" type="WindowDialog" parent="."]
pause_mode = 1
margin_left = 15.0
margin_top = 25.0
margin_right = 465.0
margin_bottom = 575.0
rect_min_size = Vector2( 350, 450 )
popup_exclusive = true
window_title = "Settings"
resizable = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SettingsTabs" type="TabContainer" parent="SettingsWindow"]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Graphic" type="VBoxContainer" parent="SettingsWindow/SettingsTabs"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 4.0
margin_top = 32.0
margin_right = -4.0
margin_bottom = -4.0

[node name="Window" type="VBoxContainer" parent="SettingsWindow/SettingsTabs/Graphic"]
margin_right = 442.0
margin_bottom = 114.0

[node name="Label" type="Label" parent="SettingsWindow/SettingsTabs/Graphic/Window"]
margin_right = 442.0
margin_bottom = 14.0
text = "Window"
align = 1
valign = 1

[node name="Resolution" type="HBoxContainer" parent="SettingsWindow/SettingsTabs/Graphic/Window"]
margin_top = 18.0
margin_right = 442.0
margin_bottom = 38.0

[node name="Label" type="Label" parent="SettingsWindow/SettingsTabs/Graphic/Window/Resolution"]
margin_top = 3.0
margin_right = 219.0
margin_bottom = 17.0
size_flags_horizontal = 3
text = "Resolution"
valign = 1

[node name="OptionButton" type="OptionButton" parent="SettingsWindow/SettingsTabs/Graphic/Window/Resolution"]
margin_left = 223.0
margin_right = 442.0
margin_bottom = 20.0
size_flags_horizontal = 7
size_flags_vertical = 4
text = "1920x1080"
items = [ "1920x1080", null, false, 0, null ]
selected = 0

[node name="Mode" type="HBoxContainer" parent="SettingsWindow/SettingsTabs/Graphic/Window"]
margin_top = 42.0
margin_right = 442.0
margin_bottom = 62.0

[node name="Label" type="Label" parent="SettingsWindow/SettingsTabs/Graphic/Window/Mode"]
margin_top = 3.0
margin_right = 219.0
margin_bottom = 17.0
size_flags_horizontal = 3
text = "Mode"
valign = 1

[node name="OptionButton" type="OptionButton" parent="SettingsWindow/SettingsTabs/Graphic/Window/Mode"]
margin_left = 223.0
margin_right = 442.0
margin_bottom = 20.0
size_flags_horizontal = 7
size_flags_vertical = 4
text = "Fullscreen"
items = [ "Fullscreen", null, false, 0, null, "Windowed", null, false, 1, null ]
selected = 0

[node name="Msaa" type="HBoxContainer" parent="SettingsWindow/SettingsTabs/Graphic/Window"]
margin_top = 66.0
margin_right = 442.0
margin_bottom = 86.0

[node name="Label" type="Label" parent="SettingsWindow/SettingsTabs/Graphic/Window/Msaa"]
margin_top = 3.0
margin_right = 219.0
margin_bottom = 17.0
size_flags_horizontal = 3
text = "Msaa"
valign = 1

[node name="OptionButton" type="OptionButton" parent="SettingsWindow/SettingsTabs/Graphic/Window/Msaa"]
margin_left = 223.0
margin_right = 442.0
margin_bottom = 20.0
size_flags_horizontal = 7
size_flags_vertical = 4
text = "Disabled"
items = [ "Disabled", null, false, 0, null, "MSAA 2x", null, false, 1, null, "MSAA 4x", null, false, 2, null, "MSAA 8x", null, false, 3, null, "MSAA 16x", null, false, 4, null ]
selected = 0

[node name="GridContainer" type="GridContainer" parent="SettingsWindow/SettingsTabs/Graphic/Window"]
margin_top = 90.0
margin_right = 442.0
margin_bottom = 114.0
columns = 2

[node name="Vsync" type="CheckBox" parent="SettingsWindow/SettingsTabs/Graphic/Window/GridContainer"]
margin_left = 50.0
margin_right = 169.0
margin_bottom = 24.0
size_flags_horizontal = 6
text = "Vsync Enabled"
align = 1

[node name="FontOversampling" type="CheckBox" parent="SettingsWindow/SettingsTabs/Graphic/Window/GridContainer"]
margin_left = 258.0
margin_right = 407.0
margin_bottom = 24.0
size_flags_horizontal = 6
text = "Font Oversampling"
align = 1

[node name="Sound" type="VBoxContainer" parent="SettingsWindow/SettingsTabs"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 4.0
margin_top = 32.0
margin_right = -4.0
margin_bottom = -4.0

[node name="Input" type="VBoxContainer" parent="SettingsWindow/SettingsTabs"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 4.0
margin_top = 32.0
margin_right = -4.0
margin_bottom = -4.0
custom_constants/separation = 15

[node name="Control" type="VBoxContainer" parent="SettingsWindow/SettingsTabs/Input"]
margin_right = 442.0
margin_bottom = 34.0
size_flags_horizontal = 3

[node name="Label" type="Label" parent="SettingsWindow/SettingsTabs/Input/Control"]
margin_right = 442.0
margin_bottom = 14.0
text = "Control"
align = 1
valign = 1

[node name="MouseSensitivity" type="HBoxContainer" parent="SettingsWindow/SettingsTabs/Input/Control"]
margin_top = 18.0
margin_right = 442.0
margin_bottom = 34.0
alignment = 2

[node name="Label" type="Label" parent="SettingsWindow/SettingsTabs/Input/Control/MouseSensitivity"]
margin_top = 1.0
margin_right = 219.0
margin_bottom = 15.0
size_flags_horizontal = 3
text = "Mouse Sensitivity"
align = 1
valign = 1

[node name="Input" type="HBoxContainer" parent="SettingsWindow/SettingsTabs/Input/Control/MouseSensitivity"]
margin_left = 223.0
margin_right = 442.0
margin_bottom = 16.0
size_flags_horizontal = 3
script = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Slider" type="HSlider" parent="SettingsWindow/SettingsTabs/Input/Control/MouseSensitivity/Input"]
margin_right = 167.0
margin_bottom = 16.0
size_flags_horizontal = 3
size_flags_vertical = 4
max_value = 10.0
step = 0.1
tick_count = 11
ticks_on_borders = true

[node name="Value" type="LineEdit" parent="SettingsWindow/SettingsTabs/Input/Control/MouseSensitivity/Input"]
margin_left = 171.0
margin_right = 219.0
margin_bottom = 16.0
custom_styles/normal = SubResource( 1 )
align = 1
max_length = 3

[node name="KeyBinds" type="VBoxContainer" parent="SettingsWindow/SettingsTabs/Input"]
margin_top = 49.0
margin_right = 442.0
margin_bottom = 514.0
size_flags_vertical = 3
script = ExtResource( 2 )

[node name="Label" type="Label" parent="SettingsWindow/SettingsTabs/Input/KeyBinds"]
margin_right = 442.0
margin_bottom = 14.0
text = "Key Binds"
align = 1
valign = 1

[node name="ScrollContainer" type="ScrollContainer" parent="SettingsWindow/SettingsTabs/Input/KeyBinds"]
margin_top = 18.0
margin_right = 442.0
margin_bottom = 465.0
size_flags_vertical = 3
follow_focus = true
scroll_horizontal_enabled = false

[node name="HBoxContainer" type="HBoxContainer" parent="SettingsWindow/SettingsTabs/Input/KeyBinds/ScrollContainer"]
margin_right = 442.0
margin_bottom = 308.0
size_flags_horizontal = 3
custom_constants/separation = 0
script = ExtResource( 5 )

[node name="Labels" type="VBoxContainer" parent="SettingsWindow/SettingsTabs/Input/KeyBinds/ScrollContainer/HBoxContainer"]
margin_right = 221.0
margin_bottom = 308.0
size_flags_horizontal = 3

[node name="Buttons" type="VBoxContainer" parent="SettingsWindow/SettingsTabs/Input/KeyBinds/ScrollContainer/HBoxContainer"]
margin_left = 221.0
margin_right = 442.0
margin_bottom = 308.0
size_flags_horizontal = 3
[connection signal="toggled" from="Main/Left/Settings" to="Main/Left/Settings" method="_on_Settings_toggled"]
[connection signal="text_changed" from="Main/Center/LoginWindow/Login" to="Main/Center/LoginWindow" method="_on_Login_and_Password_text_changed"]
[connection signal="text_changed" from="Main/Center/LoginWindow/Password" to="Main/Center/LoginWindow" method="_on_Login_and_Password_text_changed"]
[connection signal="text_entered" from="Main/Center/LoginWindow/Password" to="Main/Center/LoginWindow" method="_on_Password_text_entered"]
[connection signal="pressed" from="Main/Center/LoginWindow/Buttons/Enter" to="Main/Center/LoginWindow" method="_on_Enter_pressed"]
[connection signal="pressed" from="Main/Center/LoginWindow/Buttons/Quit" to="Main/Center/LoginWindow" method="_on_Quit_pressed"]
[connection signal="popup_hide" from="SettingsWindow" to="Main/Left/Settings" method="_on_SettingsWindow_popup_hide"]
[connection signal="value_changed" from="SettingsWindow/SettingsTabs/Input/Control/MouseSensitivity/Input/Slider" to="SettingsWindow/SettingsTabs/Input/Control/MouseSensitivity/Input" method="_on_Slider_value_changed"]
[connection signal="focus_exited" from="SettingsWindow/SettingsTabs/Input/Control/MouseSensitivity/Input/Value" to="SettingsWindow/SettingsTabs/Input/Control/MouseSensitivity/Input" method="_on_Value_focus_exited"]
[connection signal="text_entered" from="SettingsWindow/SettingsTabs/Input/Control/MouseSensitivity/Input/Value" to="SettingsWindow/SettingsTabs/Input/Control/MouseSensitivity/Input" method="_on_Value_text_entered"]
